--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -217,3 +217,37 @@ select {
   background: rgba(19, 19, 24, 0.50);
   border-radius: 16px;
 }
+.social-area {
+  background: rgba(19, 19, 24, 0.03);
+  border-radius: 16px;
+}
+.input-field h5 {
+  color: #131318;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.input-field input,
+.input-field textarea,
+.input-field-button input {
+  border-radius: 12px;
+  background: rgba(19, 19, 24, 0.03);
+  height: 64px;
+  border: 0px;
+  outline: none;
+  color: #131318;
+  width: 100%;
+  padding: 0px 20px;
+}
+.input-field textarea {
+  height: 300px;
+  padding-top: 20px;
+  background: rgba(19, 19, 24, 0.03);
+}
+.input-field-button input {
+  background: #FF4240;
+  text-align: center;
+  color: #fff;
+  font-weight: 700;
+  height: 56px;
+}
